# sumukha

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  imdb_dataset.csv  setup.cfg  setup.py
data/preprocess/: data.txt  dataset.pkl
data/raw/: imdb_dataset.csv
embeddings/domain/: vocab.pkl
embeddings/general/: vectors.pkl  vocab.pkl
scripts/: version.py
src/sumukha/: config.py  encode.py  evaluate.py  preprocessor.py  train.py  upload.py
src/sumukha/encoding/: build_encoders.py
src/sumukha/evaluation/: evaluate_embeddings.py
src/sumukha/interface/training/: run.py
src/sumukha/preprocessing/: input_preprocessor.py
src/sumukha/training/: train_embeddings.py
