[project]
name = Sumukha
description = Word Embeddings Project
version = 0.0.0

[flake8]
ignore = D100,D101,D102,D103,D104,D105,D107,D200,D202,D204,D205,D400,D401,D403,E501,H101,H238,H301,H306,H404,H405,N803,N806,W504,T000
max-line-length = 100
jobs = 8
count = True
application_import_names = config, tests
exclude =
	__pycache__,
	.dockerignore,
	.env,
	.git,
	.gitignore,
	.gitlab,
	.gitmodules,
	.python-version,
	.vscode,
	*.pyc,
	CHANGELOG.md,
	CONTRIBUTING.md,
	docker-compose.yml
	README.md,
	requirements,
	requirements.txt,
	scripts,
	setup.cfg,
	thrift_models,
	Recommender Filter Study.py,
	Result Study.py,
	Exploration.py,
	py_to_ipynb.py
